add file extension count

--- a/Master-Zhao/Master-Zhao.Shell/Styles/ButtonStyle.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Styles/ButtonStyle.xaml
@@ -55,9 +55,9 @@
 
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-        <Setter Property="Background" Value="Silver"/>
+        <Setter Property="Background" Value="{DynamicResource AccentBaseColor}"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="Foreground" Value="{DynamicResource WhiteColor}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
