--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/UserControls/StartMenuControl.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/UserControls/StartMenuControl.xaml
@@ -25,7 +25,7 @@
             <Label Name="title" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
         </Grid>
         <Grid Grid.Row="1">
-            <Button Content="设置" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="48" Height="20" Click="set_Click"/>
+            <Button Content="设置" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="48" Height="20" Click="set_Click" Style="{StaticResource ButtonStyle}"/>
         </Grid>
     </Grid>
 </UserControl>
