--- a/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/DiskFileManagement.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/DiskFileManagement.xaml
@@ -160,6 +160,66 @@
                     </DockPanel>
                 </Grid>
             </TabItem>
+            <TabItem Header="大文件统计" Style="{StaticResource StyleTabItem}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="60"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <ListBox Style="{StaticResource ListBoxStyle}" Name="lst_BigFile" MouseDoubleClick="lst_BigFile_MouseDoubleClick">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0,3,0,3" Width="{Binding ElementName=lst_BigFile,Path=ActualWidth,UpdateSourceTrigger=PropertyChanged}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="45"/>
+                                        <ColumnDefinition Width="65"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Image Source="{Binding Icon}"
+                                    Width="38" Height="38" Stretch="UniformToFill" Grid.RowSpan="3" VerticalAlignment="Center"></Image>
+
+                                    <Label Content="文件类型：" FontWeight="Bold" Grid.Column="1"></Label>
+                                    <Label Content="{Binding FriendlyName}" Grid.Column="2" FontWeight="Bold"></Label>
+                                    <Label Content="文件路径：" Grid.Column="1" Grid.Row="1" FontWeight="Bold"></Label>
+                                    <Label Content="{Binding Path}" Grid.Column="2" Grid.Row="1"></Label>
+
+                                    <Label Content="文件大小：" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold"></Label>
+                                    <Label Content="{Binding Size,Converter={StaticResource DiskSizeToStringConverter}}" Grid.Row="2" Grid.Column="2"  VerticalAlignment="Center" HorizontalAlignment="Left"></Label>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+
+                    <DockPanel Grid.Row="1" LastChildFill="False">
+                        <Button Content="&#xf160;" Width="30" Height="30" FontSize="20" Margin="3,3,0,0"
+         VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+         ToolTip="按类型个数降序" Name="btn_BigFileSizeDesc" Click="btn_BigFileSizeDesc_Click"></Button>
+                        <Button Content="&#xf161;" Width="30" Height="30" FontSize="20" Margin="3,3,0,0"
+         VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+         ToolTip="按类型个数升序" Name="btn_BigFileSizeAsc" Click="btn_BigFileSizeAsc_Click"></Button>
+                        <Button Content="&#xf0dc;" Width="30" Height="30" FontSize="20" Margin="3,3,0,0"
+         VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+         ToolTip="默认排序" Name="btn_BigFileSizeDefault" Click="btn_BigFileSizeDefault_Click"></Button>
+                               
+                        <Label Content="大于" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,5,0,0"></Label>
+                        <TextBox Width="50" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Margin="0,8,0,0" Text="100" Name="tbox_Size"></TextBox>
+                        <Label Content="MB" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,5,0,0"></Label>
+                        <CheckBox Content="小于" HorizontalAlignment="Left" Style="{StaticResource CheckBoxStyle}" VerticalAlignment="Top" Margin="20,8,3,0" Name="cbx_EnableMaxSize"></CheckBox>
+                        <TextBox Width="50" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Margin="0,8,0,0" Text="100" Name="tbox_SizeMax" IsEnabled="{Binding ElementName=cbx_EnableMaxSize,Path=IsChecked}"></TextBox>
+                        <Label Content="MB" HorizontalAlignment="Left" VerticalAlignment="Top" IsEnabled="{Binding ElementName=cbx_EnableMaxSize,Path=IsChecked}" Margin="0,5,0,0"></Label>
+
+                        <Button Width="108" Height="28" Content="生成大文件统计" VerticalAlignment="Top" DockPanel.Dock="Right" Style="{StaticResource ButtonStyle}" Name="btn_BigFile" Click="btn_BigFile_Click"></Button>
+                    </DockPanel>
+                </Grid>
+            </TabItem>
         </TabControl>
     </Grid>
 </Page>
