--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/DesktopBeautify.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/DesktopBeautify.xaml
@@ -27,6 +27,7 @@
             <StackPanel Grid.Row="1">
                 <ToggleButton Content="静态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StaticWallpaperClick" IsChecked="True"/>
                 <ToggleButton Content="动态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_DynamicWallpaperClick"/>
+                <ToggleButton Content="资源管理器设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_ExplorerSettingClick"/>
                 <ToggleButton Content="鼠标特效" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_MouseEffectClick"/>
                 <ToggleButton Content="自定义开始菜单" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_StartMenuSettingClick"/>
                 <ToggleButton Content="任务栏设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_TaskbarSettingClick"/>
