update windows 98 start menu style

--- a/WindowsX/WindowsX.Shell/App.xaml
+++ b/WindowsX/WindowsX.Shell/App.xaml
@@ -40,6 +40,7 @@
                 <ResourceDictionary Source="Styles/ImageStyle.xaml"/>
                 <ResourceDictionary Source="Styles/TabControlStyle.xaml"/>
                 <ResourceDictionary Source="Styles/TreeViewStyle.xaml"/>
+                <ResourceDictionary Source="Styles/MenuStyle.xaml"/>
 
                 <!--Resources-->
                 <ResourceDictionary Source="Resources/ContextMenu/NotifyIconContextMenu.xaml"/>
