--- a/WindowsX/WindowsX.Shell/StartMenu/Win98/Windows98.xaml
+++ b/WindowsX/WindowsX.Shell/StartMenu/Win98/Windows98.xaml
@@ -7,21 +7,8 @@
         mc:Ignorable="d"
         Title="Win98" Width="260" SizeToContent="Height" MaxWidth="185" BorderThickness="3" BorderBrush="{DynamicResource ActiveBorder}" LostFocus="StartMenuWindowBase_LostFocus" Topmost="True">
     <start:StartMenuWindowBase.Resources>
-        <!--semi blue :16 132 208-->
-        <SolidColorBrush x:Key="SemiBlue" Color="#1084d0"/>
-        <!--blue:0 0 128-->
-        <SolidColorBrush x:Key="Blue" Color="#000080"/>
         <!-- active border: 192 192 192-->
         <SolidColorBrush x:Key="ActiveBorder" Color="#c0c0c0"/>
-        <!--menu select 0 0 128-->
-        <SolidColorBrush x:Key="MenuSelect" Color="#000080"/>
-        <!--application background 128 128 128-->
-        <SolidColorBrush x:Key="ApplicationBackground" Color="#808080"/>
-        <!--start menu seperator background-->
-        <SolidColorBrush Color="White" x:Key="SeperatorBackground"/>
-
-        <Geometry x:Key="Checkmark">F1 M 10.0,1.2 L 4.7,9.1 L 4.5,9.1 L 0,5.2 L 1.3,3.5 L 4.3,6.1L 8.3,0 L 10.0,1.2 Z</Geometry>
-        <SolidColorBrush x:Key="Menu.Static.Foreground" Color="#FF212121"/>
 
         <Style TargetType="{x:Type MenuItem}">
             <Setter Property="BorderBrush" Value="{DynamicResource ActiveBorder}"/>
@@ -30,106 +17,30 @@
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="Margin" Value="1"/>
             <Setter Property="MinWidth" Value="80"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type MenuItem}">
-                        <Border  x:Name="border" Background="{TemplateBinding Background}" Height="{TemplateBinding Height}" Opacity="1">
-                            <Grid  VerticalAlignment="Center" Margin="{TemplateBinding Margin}">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition />
-                                    <!--<ColumnDefinition Width="Auto"  MinWidth="80"/>-->
-                                    <ColumnDefinition Width="16" x:Name="arrow_col" />
-                                </Grid.ColumnDefinitions>
-                                <ContentPresenter x:Name="Icon" ContentSource="Icon" HorizontalAlignment="Center" Margin="5" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="Center"/>
-
-                                <ContentPresenter Grid.Column="1" x:Name="txtHeader" Margin="3,1,5,1"
-                                          RecognizesAccessKey="True" VerticalAlignment="Center" ContentSource="Header"/>
-
-                                <!--<TextBlock Grid.Column="2" Margin="3,1,3,1" x:Name="IGTHost" Text="{TemplateBinding InputGestureText}" 
-                                       FontSize="{TemplateBinding FontSize}"
-                                       VerticalAlignment="Center" Visibility="Visible" Foreground="{TemplateBinding Foreground}" />-->
-
-                                <TextBlock x:Name="PART_Arrow" Grid.Column="2" Text="➧" VerticalAlignment="Center" Foreground="{TemplateBinding Foreground}" 
-                                       FontSize="12" />
-
-                                <Popup x:Name="SubMenuPopup" AllowsTransparency="true" IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}" 
-                                        Placement="Right"  Focusable="false" VerticalOffset="0" HorizontalOffset="2"
-                                   PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}" PlacementTarget="{Binding ElementName=border}">
-                                    <Border Background="{TemplateBinding Background}"  CornerRadius="0" Margin="0"
-                                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
-                                        <Grid x:Name="SubMenu" Grid.IsSharedSizeScope="True">
-                                            <StackPanel Margin="0" IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle"/>
-                                        </Grid>
-                                    </Border>
-                                </Popup>
-                            </Grid>
-                        </Border>
-
-                        <ControlTemplate.Triggers>
-
-                            <Trigger Property="Role" Value="TopLevelHeader">
-                                <Setter Property="Visibility" Value="Collapsed" TargetName="PART_Arrow"/>
-                                <!--<Setter Property="Visibility" Value="Collapsed" TargetName="IGTHost"/>-->
-                                <!--<Setter Property="Margin" Value="5,1,1,1" TargetName="PART_Icon"/>-->
-                                <Setter Property="Margin" Value="1,1,6,1" TargetName="txtHeader"/>
-                                <Setter Property="MinWidth" Value="10" TargetName="txtHeader"/>
-                                <Setter Property="Width" Value="0" TargetName="arrow_col"/>
-                            </Trigger>
-
-                            <Trigger Property="Role" Value="TopLevelItem">
-                                <Setter Property="Visibility" Value="Collapsed" TargetName="PART_Arrow"/>
-                                <!--<Setter Property="Visibility" Value="Collapsed" TargetName="IGTHost"/>-->
-                                <!--<Setter Property="Margin" Value="5,1,1,1" TargetName="PART_Icon"/>-->
-                                <Setter Property="Margin" Value="1,1,6,1" TargetName="txtHeader"/>
-                                <Setter Property="MinWidth" Value="10" TargetName="txtHeader"/>
-                                <Setter Property="Width" Value="0" TargetName="arrow_col"/>
-                            </Trigger>
-
-                            <Trigger Property="Role" Value="SubmenuHeader">
-                                <Setter Property="Visibility" Value="Visible" TargetName="PART_Arrow"/>
-                                <Setter Property="Placement" Value="Right" TargetName="SubMenuPopup"/>
-                            </Trigger>
-
-                            <Trigger Property="Role" Value="SubMenuItem">
-                                <Setter Property="Visibility" Value="Collapsed" TargetName="PART_Arrow"/>
-                            </Trigger>
-
-                            <Trigger Property="IsChecked" Value="True">
-                                <!--<Setter TargetName="PART_Icon" Value="&#xe62a;" Property="Text"></Setter>
-                            <Setter TargetName="PART_Icon" Value="18" Property="FontSize"></Setter>-->
-
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="False">
-
-                            </Trigger>
-
-                            <Trigger Property="IsHighlighted" Value="true">
-                                <Setter Property="Foreground" Value="{DynamicResource SeperatorBackground}"></Setter>
-                                <!--<Setter Property="BorderBrush" Value="#3db39e"/>-->
-                                <Setter Property="Background" TargetName="border" Value="{DynamicResource MenuSelect}"/>
-                                <Setter TargetName="Icon" Property="Opacity" Value=".8"></Setter>
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="true">
-
-                            </Trigger>
-
-                            <Trigger Property="IsSubmenuOpen" Value="true" >
-
-                            </Trigger>
-
-
-                            <Trigger Property="IsHighlighted" Value="True">
-                                <Setter Property="IsSubmenuOpen" Value="True"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="False">
-                                <Setter Property="IsSubmenuOpen" Value="False"/>
-                            </Trigger>
-
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+            <Setter Property="Height" Value="12"/>
+            <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
+            <Style.Triggers>
+                <Trigger Property="Role" Value="TopLevelHeader">
+                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
+                    <Setter Property="Padding" Value="3,1,5,1"/>
+                    <Setter Property="MinWidth" Value="10"/>
+                </Trigger>
+                <Trigger Property="Role" Value="TopLevelItem">
+                    <Setter Property="Background" Value="{DynamicResource ActiveBorder}"/>
+                    <Setter Property="BorderBrush" Value="{DynamicResource ActiveBorder}"/>
+                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=TopLevelItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
+                    <!--因为顶级菜单使用了跟子级菜单一样的样式-->
+                    <!--导致文字没有对齐-->
+                    <!--最好的办法是自己封装一个菜单控件-->
+                    <!--业余时间有限-->
+                    <!--还是使用了自带的Menu控件-->
+                    <Setter Property="Padding" Value="10,1,5,1"/>
+                    <Setter Property="MinWidth" Value="10"/>
+                </Trigger>
+                <Trigger Property="Role" Value="SubmenuHeader">
+                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
     </start:StartMenuWindowBase.Resources>
 
