--- a/WindowsX/WindowsX.Shell/Styles/ButtonStyle.xaml
+++ b/WindowsX/WindowsX.Shell/Styles/ButtonStyle.xaml
@@ -88,4 +88,47 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="Windows98ButtonStyle" TargetType="{x:Type Button}">
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        <Setter Property="Background" Value="{DynamicResource ActiveBorder}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BlackColor}"/>
+        <Setter Property="Foreground" Value="{DynamicResource BlackColor}"/>
+        <Setter Property="BorderThickness" Value="0,1,0,0"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="1"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid>
+                        <Rectangle Panel.ZIndex="1" Stroke="{DynamicResource BlackColor}" StrokeThickness="0.5" StrokeDashArray="4 2" Margin="4" x:Name="dashRect" Visibility="Collapsed"></Rectangle>
+                        <Border Panel.ZIndex="1" Margin="1" BorderThickness="1,1,0,0" BorderBrush="{DynamicResource WhiteColor}" x:Name="whiteBorder"></Border>
+                        <Border Panel.ZIndex="1" Margin="1" BorderThickness="0,0,1,1" BorderBrush="{DynamicResource BlackColor}"></Border>
+                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <!--<Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource ButtonBorderColor}"/>
+                            <Setter Property="BorderThickness" TargetName="border" Value="2"/>
+                        </Trigger>-->
+                        <Trigger Property="IsPressed" Value="true">
+                            <!--<Setter Property="Background" TargetName="border" Value="{DynamicResource ButtonBorderColor}"/>-->
+                            <!--<Setter Property="BorderBrush" TargetName="border" Value="Transparent"/>-->
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="whiteBorder"></Setter>
+                            <Setter Property="Padding" Value="1,2,0,0"/>
+                            <Setter Property="Visibility" Value="Visible" TargetName="dashRect"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Background" TargetName="border" Value="{DynamicResource ButtonDisabledBackgroundColor}"/>
+                            <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource ButtonDisabledBorderColor}"/>
+                            <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{DynamicResource ButtonDisabledForegroundColor}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
